<resources>
    <string name="app_name">SportsApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_auth">Sign in</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_challenge">Défis</string>
    <string name="title_workout">Entrainement</string>
    <string name="title_program">Programme</string>
    <string name="title_profile">Profil</string>
    <string name="title_stats">Statistiques</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="title_activity_gps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="cancel">Fermer</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
</resources>
