<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/navigation_program"
        android:icon="@drawable/ic_layers_black_24dp"
        android:title="@string/title_program" />

    <item
        android:id="@+id/navigation_challenge"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/title_challenge" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
